finish responsive mobile

--- a/speaker.html
+++ b/speaker.html
@@ -68,8 +68,100 @@
 						<h2>Bienvenidos los que<br> quieren <span class="font-weight-bold">cambiarlo todo</span></h2>
 					</div>
 
-					<div class="row pt-5 pb-5 pl-3 pr-3">
-						<div class="col-md-3 col-6">
+					<div class="carousel slide" data-ride="carousel" id="demo" data-interval="3000">
+			        <div class="carousel-inner">
+			            <div class="carousel-item active">
+			                <div class="row pt-5 pb-5 pl-3 pr-3">
+								<div class="col-md-3 col-6">
+									<div class="content-men men-1">
+										<div class="content-btn">
+											<a href="" class="btn-transparent btn-details">
+												Ken Segall
+											</a>
+										</div>						
+									</div>
+								</div>
+								<div class="col-md-3 col-6 mt-50">
+									<div class="content-men men-2">
+										<div class="content-btn">
+											<a href="" class="btn-transparent btn-details">
+												Ian Khan
+											</a>
+										</div>						
+									</div>
+								</div>
+								<div class="col-md-3 col-6">
+									<div class="content-men men-3">
+										<div class="content-btn">
+											<a href="" class="btn-transparent btn-details">
+												Aric Dromi
+											</a>
+										</div>						
+									</div>
+								</div>
+								<div class="col-md-3 col-6 mt-50">
+									<div class="content-men men-4">
+										<div class="content-btn">
+											<a href="" class="btn-transparent btn-details">
+												Pablo Turletti
+											</a>
+										</div>						
+									</div>
+								</div>
+							</div>
+			            </div>
+			            <div class="carousel-item">
+			               <div class="row pt-5 pb-5 pl-3 pr-3">
+								<div class="col-md-3 col-6">
+									<div class="content-men men-1">
+										<div class="content-btn">
+											<a href="" class="btn-transparent btn-details">
+												Ken Segall
+											</a>
+										</div>						
+									</div>
+								</div>
+								<div class="col-md-3 col-6 mt-50">
+									<div class="content-men men-2">
+										<div class="content-btn">
+											<a href="" class="btn-transparent btn-details">
+												Ian Khan
+											</a>
+										</div>						
+									</div>
+								</div>
+								<div class="col-md-3 col-6">
+									<div class="content-men men-3">
+										<div class="content-btn">
+											<a href="" class="btn-transparent btn-details">
+												Aric Dromi
+											</a>
+										</div>						
+									</div>
+								</div>
+								<div class="col-md-3 col-6 mt-50">
+									<div class="content-men men-4">
+										<div class="content-btn">
+											<a href="" class="btn-transparent btn-details">
+												Pablo Turletti
+											</a>
+										</div>						
+									</div>
+								</div>
+							</div>
+			            </div>
+				        </div>
+				         <!-- Left and right controls -->
+						  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+						    <span class="carousel-control-prev-icon"></span>
+						  </a>
+						  <a class="carousel-control-next" href="#demo" data-slide="next">
+						    <span class="carousel-control-next-icon"></span>
+						  </a>
+				    </div>
+
+				    <div class="row pt-5 pb-5 pl-3 pr-3 show-mobile">
+						<div class="col-md-6 col-lg-3 col-6">
 							<div class="content-men men-1">
 								<div class="content-btn">
 									<a href="" class="btn-transparent btn-details">
@@ -78,7 +170,7 @@
 								</div>						
 							</div>
 						</div>
-						<div class="col-md-3 col-6 mt-50">
+						<div class="col-md-6 col-lg-3 col-6 mt-50">
 							<div class="content-men men-2">
 								<div class="content-btn">
 									<a href="" class="btn-transparent btn-details">
@@ -87,7 +179,7 @@
 								</div>						
 							</div>
 						</div>
-						<div class="col-md-3 col-6">
+						<div class="col-md-6 col-lg-3 col-6">
 							<div class="content-men men-3">
 								<div class="content-btn">
 									<a href="" class="btn-transparent btn-details">
@@ -96,7 +188,7 @@
 								</div>						
 							</div>
 						</div>
-						<div class="col-md-3 col-6 mt-50">
+						<div class="col-md-6 col-lg-3 col-6 mt-50">
 							<div class="content-men men-4">
 								<div class="content-btn">
 									<a href="" class="btn-transparent btn-details">
@@ -109,9 +201,6 @@
 				</div>
 			</div>
 		</div>
-
-		
-
 
 
 
