--- a/speaker.html
+++ b/speaker.html
@@ -68,43 +68,71 @@
 						<h2>Bienvenidos los que<br> quieren <span class="font-weight-bold">cambiarlo todo</span></h2>
 					</div>
 
-					<div class="carousel slide" data-ride="carousel" id="demo" data-interval="3000">
+					<div class="carousel slide" id="demo" data-interval="3000">
 			        <div class="carousel-inner">
 			            <div class="carousel-item active">
 			                <div class="row pt-5 pb-5 pl-3 pr-3">
 								<div class="col-md-3 col-6">
 									<div class="content-men men-1">
 										<div class="content-btn">
-											<a href="" class="btn-transparent btn-details">
-												Ken Segall
-											</a>
+											<div class="pb-4">
+												<a href="" class="btn-transparent btn-details">
+													Ken Segall
+												</a>
+												<div class="content-arrow">
+													<a href="">
+														<img src="img/logo-arrows.png">
+													</a>
+												</div>
+											</div>
 										</div>						
 									</div>
 								</div>
 								<div class="col-md-3 col-6 mt-50">
 									<div class="content-men men-2">
 										<div class="content-btn">
-											<a href="" class="btn-transparent btn-details">
-												Ian Khan
-											</a>
+											<div class="pb-4">
+												<a href="" class="btn-transparent btn-details">
+													Ian Khan
+												</a>
+												<div class="content-arrow">
+													<a href="">
+														<img src="img/logo-arrows.png">
+													</a>
+												</div>
+											</div>
 										</div>						
 									</div>
 								</div>
 								<div class="col-md-3 col-6">
 									<div class="content-men men-3">
 										<div class="content-btn">
-											<a href="" class="btn-transparent btn-details">
-												Aric Dromi
-											</a>
+											<div class="pb-4">
+												<a href="" class="btn-transparent btn-details">
+													Aric Dromi
+												</a>
+												<div class="content-arrow">
+													<a href="">
+														<img src="img/logo-arrows.png">
+													</a>
+												</div>
+											</div>
 										</div>						
 									</div>
 								</div>
 								<div class="col-md-3 col-6 mt-50">
 									<div class="content-men men-4">
 										<div class="content-btn">
-											<a href="" class="btn-transparent btn-details">
-												Pablo Turletti
-											</a>
+											<div class="pb-4">
+												<a href="" class="btn-transparent btn-details">
+													Pablo Turletti
+												</a>
+												<div class="content-arrow">
+													<a href="">
+														<img src="img/logo-arrows.png">
+													</a>
+												</div>
+											</div>
 										</div>						
 									</div>
 								</div>
@@ -115,36 +143,64 @@
 								<div class="col-md-3 col-6">
 									<div class="content-men men-1">
 										<div class="content-btn">
-											<a href="" class="btn-transparent btn-details">
-												Ken Segall
-											</a>
+											<div class="pb-4">
+												<a href="" class="btn-transparent btn-details">
+													Ken Segall
+												</a>
+												<div class="content-arrow">
+													<a href="">
+														<img src="img/logo-arrows.png">
+													</a>
+												</div>
+											</div>
 										</div>						
 									</div>
 								</div>
 								<div class="col-md-3 col-6 mt-50">
 									<div class="content-men men-2">
 										<div class="content-btn">
-											<a href="" class="btn-transparent btn-details">
-												Ian Khan
-											</a>
+											<div class="pb-4">
+												<a href="" class="btn-transparent btn-details">
+													Ian Khan
+												</a>
+												<div class="content-arrow">
+													<a href="">
+														<img src="img/logo-arrows.png">
+													</a>
+												</div>
+											</div>
 										</div>						
 									</div>
 								</div>
 								<div class="col-md-3 col-6">
 									<div class="content-men men-3">
 										<div class="content-btn">
-											<a href="" class="btn-transparent btn-details">
-												Aric Dromi
-											</a>
+											<div class="pb-4">
+												<a href="" class="btn-transparent btn-details">
+													Aric Dromi
+												</a>
+												<div class="content-arrow">
+													<a href="">
+														<img src="img/logo-arrows.png">
+													</a>
+												</div>
+											</div>
 										</div>						
 									</div>
 								</div>
 								<div class="col-md-3 col-6 mt-50">
 									<div class="content-men men-4">
 										<div class="content-btn">
-											<a href="" class="btn-transparent btn-details">
-												Pablo Turletti
-											</a>
+											<div class="pb-4">
+												<a href="" class="btn-transparent btn-details">
+													Pablo Turletti
+												</a>
+												<div class="content-arrow">
+													<a href="">
+														<img src="img/logo-arrows.png">
+													</a>
+												</div>
+											</div>
 										</div>						
 									</div>
 								</div>
@@ -164,40 +220,69 @@
 						<div class="col-md-6 col-lg-3 col-6">
 							<div class="content-men men-1">
 								<div class="content-btn">
-									<a href="" class="btn-transparent btn-details">
-										Ken Segall
-									</a>
+									<div class="pb-4">
+										<a href="" class="btn-transparent btn-details">
+											Ken Segall
+										</a>
+										<div class="content-arrow">
+											<a href="">
+												<img src="img/logo-arrows.png">
+											</a>
+										</div>
+									</div>
 								</div>						
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6 mt-50">
 							<div class="content-men men-2">
 								<div class="content-btn">
-									<a href="" class="btn-transparent btn-details">
-										Ian Khan
-									</a>
+									<div class="pb-4">
+										<a href="" class="btn-transparent btn-details">
+											Ian Khan
+										</a>
+										<div class="content-arrow">
+											<a href="">
+												<img src="img/logo-arrows.png">
+											</a>
+										</div>
+									</div>
 								</div>						
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6">
 							<div class="content-men men-3">
 								<div class="content-btn">
-									<a href="" class="btn-transparent btn-details">
-										Aric Dromi
-									</a>
+									<div class="pb-4">
+										<a href="" class="btn-transparent btn-details">
+											Aric Dromi
+										</a>
+										<div class="content-arrow">
+											<a href="">
+												<img src="img/logo-arrows.png">
+											</a>
+										</div>
+									</div>
 								</div>						
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6 mt-50">
 							<div class="content-men men-4">
 								<div class="content-btn">
-									<a href="" class="btn-transparent btn-details">
-										Pablo Turletti
-									</a>
+									<div class="pb-4">
+										<a href="" class="btn-transparent btn-details">
+											Pablo Turletti
+										</a>
+										<div class="content-arrow">
+											<a href="">
+												<img src="img/logo-arrows.png">
+											</a>
+										</div>
+									</div>
 								</div>						
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
