landing experiencia arreglada

--- a/experiencia.html
+++ b/experiencia.html
@@ -73,25 +73,25 @@
 				
 				<div class="col-md-4">
 					<div class="content-men-experience experience-1 mb-5">
-						<div class="content-category category-vip" data-toggle="modal" data-target="#benefiets">
+						<div class="content-category category-vip" data-toggle="modal" data-target="#modal-vip">
 							<h1 class="category exp-1">VIP</h1>
 							<div class="show-benefiets bc-experience-1 c-none">							
 								<div class="content-list">
 									<h3 class="text-uppercase c-default mb-0">Beneficios</h3>
 									<ul>
-										<li><img src="img/icon-check.png">BENEFICIOS</li>
-										<li><img src="img/icon-check.png">2 DÍAS DE CONFERENCIAS PRINCIPALES</li>
-										<li><img src="img/icon-check.png">ACCESO AULAS DE CLASS IN CLASS</li>
-										<li><img src="img/icon-check.png">INGRESO EXCLUSIVO</li>
-										<li><img src="img/icon-check.png">BENEFICIOS EXMA VIP</li>
-										<li><img src="img/icon-check.png">UBICACIÓN PREFERENCIAL (PREFERENCIAL)</li>
-										<li><img src="img/icon-check.png">ACCESO PLATAFORMA VIRTUAL</li>
-										<li><img src="img/icon-check.png">CERTIFICADO DIGITAL</li>
-										<li><img src="img/icon-check.png">KIT DE BIENVENIDA</li>
-										<li><img src="img/icon-check.png">ACCESO REVISTA DIGITAL</li>
-										<li><img src="img/icon-check.png">COFFEE ZONE</li>
-										<li><img src="img/icon-check.png">DESCUENTO EN HOTELES</li>
-										<li><img src="img/icon-check.png">APP EXMA</li>
+										<li><img src="img/logo-check-vip.png">BENEFICIOS</li>
+										<li><img src="img/logo-check-vip.png">2 DÍAS DE CONFERENCIAS PRINCIPALES</li>
+										<li><img src="img/logo-check-vip.png">ACCESO AULAS DE CLASS IN CLASS</li>
+										<li><img src="img/logo-check-vip.png">INGRESO EXCLUSIVO</li>
+										<li><img src="img/logo-check-vip.png">BENEFICIOS EXMA VIP</li>
+										<li><img src="img/logo-check-vip.png">UBICACIÓN PREFERENCIAL (PREFERENCIAL)</li>
+										<li><img src="img/logo-check-vip.png">ACCESO PLATAFORMA VIRTUAL</li>
+										<li><img src="img/logo-check-vip.png">CERTIFICADO DIGITAL</li>
+										<li><img src="img/logo-check-vip.png">KIT DE BIENVENIDA</li>
+										<li><img src="img/logo-check-vip.png">ACCESO REVISTA DIGITAL</li>
+										<li><img src="img/logo-check-vip.png">COFFEE ZONE</li>
+										<li><img src="img/logo-check-vip.png">DESCUENTO EN HOTELES</li>
+										<li><img src="img/logo-check-vip.png">APP EXMA</li>
 									</ul>
 								</div>
 							</div>
@@ -104,25 +104,25 @@
 				</div>
 				<div class="col-md-4">
 					<div class="content-men-experience experience-2 mb-5">
-						<div class="content-category category-oro">
+						<div class="content-category category-oro" data-toggle="modal" data-target="#modal-oro">
 							<h1 class="category exp-1">Oro</h1>
 							<div class="show-benefiets bc-experience-2 c-none">							
 								<div class="content-list">
 									<h3 class="text-uppercase c-default mb-0">Beneficios</h3>
 									<ul>
-										<li><img src="img/icon-check.png">BENEFICIOS</li>
-										<li><img src="img/icon-check.png">2 DÍAS DE CONFERENCIAS PRINCIPALES</li>
-										<li><img src="img/icon-check.png">ACCESO AULAS DE CLASS IN CLASS</li>
-										<li><img src="img/icon-check.png">INGRESO EXCLUSIVO</li>
-										<li><img src="img/icon-check.png">BENEFICIOS EXMA VIP</li>
-										<li><img src="img/icon-check.png">UBICACIÓN PREFERENCIAL (PREFERENCIAL)</li>
-										<li><img src="img/icon-check.png">ACCESO PLATAFORMA VIRTUAL</li>
-										<li><img src="img/icon-check.png">CERTIFICADO DIGITAL</li>
-										<li><img src="img/icon-check.png">KIT DE BIENVENIDA</li>
-										<li><img src="img/icon-check.png">ACCESO REVISTA DIGITAL</li>
-										<li><img src="img/icon-check.png">COFFEE ZONE</li>
-										<li><img src="img/icon-check.png">DESCUENTO EN HOTELES</li>
-										<li><img src="img/icon-check.png">APP EXMA</li>
+										<li><img src="img/logo-check-oro.png">BENEFICIOS</li>
+										<li><img src="img/logo-check-oro.png">2 DÍAS DE CONFERENCIAS PRINCIPALES</li>
+										<li><img src="img/logo-check-oro.png">ACCESO AULAS DE CLASS IN CLASS</li>
+										<li><img src="img/logo-check-oro.png">INGRESO EXCLUSIVO</li>
+										<li><img src="img/logo-check-oro.png">BENEFICIOS EXMA VIP</li>
+										<li><img src="img/logo-check-oro.png">UBICACIÓN PREFERENCIAL (PREFERENCIAL)</li>
+										<li><img src="img/logo-check-oro.png">ACCESO PLATAFORMA VIRTUAL</li>
+										<li><img src="img/logo-check-oro.png">CERTIFICADO DIGITAL</li>
+										<li><img src="img/logo-check-oro.png">KIT DE BIENVENIDA</li>
+										<li><img src="img/logo-check-oro.png">ACCESO REVISTA DIGITAL</li>
+										<li><img src="img/logo-check-oro.png">COFFEE ZONE</li>
+										<li><img src="img/logo-check-oro.png">DESCUENTO EN HOTELES</li>
+										<li><img src="img/logo-check-oro.png">APP EXMA</li>
 									</ul>
 								</div>
 							</div>
@@ -134,25 +134,25 @@
 				</div>
 				<div class="col-md-4">
 					<div class="content-men-experience experience-3 mb-5">
-						<div class="content-category category-plata">
+						<div class="content-category category-plata" data-toggle="modal" data-target="#modal-plata">
 							<h1 class="category exp-2">Plata</h1>							
 							<div class="show-benefiets bc-experience-3 c-none">							
 								<div class="content-list">
 									<h3 class="text-uppercase c-default mb-0">Beneficios</h3>
 									<ul>
-										<li><img src="img/icon-check.png">BENEFICIOS</li>
-										<li><img src="img/icon-check.png">2 DÍAS DE CONFERENCIAS PRINCIPALES</li>
-										<li><img src="img/icon-check.png">ACCESO AULAS DE CLASS IN CLASS</li>
-										<li><img src="img/icon-check.png">INGRESO EXCLUSIVO</li>
-										<li><img src="img/icon-check.png">BENEFICIOS EXMA VIP</li>
-										<li><img src="img/icon-check.png">UBICACIÓN PREFERENCIAL (PREFERENCIAL)</li>
-										<li><img src="img/icon-check.png">ACCESO PLATAFORMA VIRTUAL</li>
-										<li><img src="img/icon-check.png">CERTIFICADO DIGITAL</li>
-										<li><img src="img/icon-check.png">KIT DE BIENVENIDA</li>
-										<li><img src="img/icon-check.png">ACCESO REVISTA DIGITAL</li>
-										<li><img src="img/icon-check.png">COFFEE ZONE</li>
-										<li><img src="img/icon-check.png">DESCUENTO EN HOTELES</li>
-										<li><img src="img/icon-check.png">APP EXMA</li>
+										<li><img src="img/logo-check-plata.png">BENEFICIOS</li>
+										<li><img src="img/logo-check-plata.png">2 DÍAS DE CONFERENCIAS PRINCIPALES</li>
+										<li><img src="img/logo-check-plata.png">ACCESO AULAS DE CLASS IN CLASS</li>
+										<li><img src="img/logo-check-plata.png">INGRESO EXCLUSIVO</li>
+										<li><img src="img/logo-check-plata.png">BENEFICIOS EXMA VIP</li>
+										<li><img src="img/logo-check-plata.png">UBICACIÓN PREFERENCIAL (PREFERENCIAL)</li>
+										<li><img src="img/logo-check-plata.png">ACCESO PLATAFORMA VIRTUAL</li>
+										<li><img src="img/logo-check-plata.png">CERTIFICADO DIGITAL</li>
+										<li><img src="img/logo-check-plata.png">KIT DE BIENVENIDA</li>
+										<li><img src="img/logo-check-plata.png">ACCESO REVISTA DIGITAL</li>
+										<li><img src="img/logo-check-plata.png">COFFEE ZONE</li>
+										<li><img src="img/logo-check-plata.png">DESCUENTO EN HOTELES</li>
+										<li><img src="img/logo-check-plata.png">APP EXMA</li>
 									</ul>
 								</div>
 							</div>
@@ -165,9 +165,48 @@
 			</div>
 		</div>
 
+		<!-- The Modal VIP-->
+		<div class="modal fade modal-benefiets modal-vip" id="modal-vip" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+		  <div class="modal-dialog modal-dialog-centered" role="document">
+		    <div class="modal-content">
+		    	<div class="content-banner">
+				    <div class="modal-header border-0">
+				        <button type="button" class="btn btn-close" data-dismiss="modal" aria-label="Close">
+				        	<img src="img/logo-close.png">
+				        </button>
+				    </div>
+				    <div class="modal-body">
+				    	<div class="content-list">
+							<h3 class="text-uppercase c-default mb-0">Beneficios</h3>
+							<ul>
+								<li><img src="img/logo-check-vip.png">BENEFICIOS</li>
+								<li><img src="img/logo-check-vip.png">2 DÍAS DE CONFERENCIAS PRINCIPALES</li>
+								<li><img src="img/logo-check-vip.png">ACCESO AULAS DE CLASS IN CLASS</li>
+								<li><img src="img/logo-check-vip.png">INGRESO EXCLUSIVO</li>
+								<li><img src="img/logo-check-vip.png">BENEFICIOS EXMA VIP</li>
+								<li><img src="img/logo-check-vip.png">UBICACIÓN PREFERENCIAL (PREFERENCIAL)</li>
+								<li><img src="img/logo-check-vip.png">ACCESO PLATAFORMA VIRTUAL</li>
+								<li><img src="img/logo-check-vip.png">CERTIFICADO DIGITAL</li>
+								<li><img src="img/logo-check-vip.png">KIT DE BIENVENIDA</li>
+								<li><img src="img/logo-check-vip.png">ACCESO REVISTA DIGITAL</li>
+								<li><img src="img/logo-check-vip.png">COFFEE ZONE</li>
+								<li><img src="img/logo-check-vip.png">DESCUENTO EN HOTELES</li>
+								<li><img src="img/logo-check-vip.png">APP EXMA</li>
+							</ul>
+						</div>
+				    </div>
+		      	</div>
+			    <div class="modal-footer border-0">
+			    	<a class="btn btn-buy-modal bc-experience-1" href="https://vive.tuboleta.com/Shows/Show.aspx?sh=UEXMA">Compra Aquí</a>
+			    </div>
+		    </div>
+		  </div>
+		</div>
+		 <!-- End Modal -->
+
 		
-		<!-- The Modal -->
-		<div class="modal fade modal-benefiets" id="benefiets" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+		<!-- The Modal ORO-->
+		<div class="modal fade modal-benefiets modal-oro" id="modal-oro" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
 		  <div class="modal-dialog modal-dialog-centered" role="document">
 		    <div class="modal-content">
 		    	<div class="content-banner">
@@ -199,6 +238,45 @@
 		      	</div>
 			    <div class="modal-footer border-0">
 			    	<a class="btn btn-buy-modal bc-experience-2" href="https://vive.tuboleta.com/Shows/Show.aspx?sh=UEXMA">Compra Aquí</a>
+			    </div>
+		    </div>
+		  </div>
+		</div>
+		 <!-- End Modal -->
+
+		 <!-- The Modal PLATA-->
+		<div class="modal fade modal-benefiets modal-plata" id="modal-plata" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+		  <div class="modal-dialog modal-dialog-centered" role="document">
+		    <div class="modal-content">
+		    	<div class="content-banner">
+				    <div class="modal-header border-0">
+				        <button type="button" class="btn btn-close" data-dismiss="modal" aria-label="Close">
+				        	<img src="img/logo-close.png">
+				        </button>
+				    </div>
+				    <div class="modal-body">
+				    	<div class="content-list">
+							<h3 class="text-uppercase c-default mb-0">Beneficios</h3>
+							<ul>
+								<li><img src="img/logo-check-plata.png">BENEFICIOS</li>
+								<li><img src="img/logo-check-plata.png">2 DÍAS DE CONFERENCIAS PRINCIPALES</li>
+								<li><img src="img/logo-check-plata.png">ACCESO AULAS DE CLASS IN CLASS</li>
+								<li><img src="img/logo-check-plata.png">INGRESO EXCLUSIVO</li>
+								<li><img src="img/logo-check-plata.png">BENEFICIOS EXMA VIP</li>
+								<li><img src="img/logo-check-plata.png">UBICACIÓN PREFERENCIAL (PREFERENCIAL)</li>
+								<li><img src="img/logo-check-plata.png">ACCESO PLATAFORMA VIRTUAL</li>
+								<li><img src="img/logo-check-plata.png">CERTIFICADO DIGITAL</li>
+								<li><img src="img/logo-check-plata.png">KIT DE BIENVENIDA</li>
+								<li><img src="img/logo-check-plata.png">ACCESO REVISTA DIGITAL</li>
+								<li><img src="img/logo-check-plata.png">COFFEE ZONE</li>
+								<li><img src="img/logo-check-plata.png">DESCUENTO EN HOTELES</li>
+								<li><img src="img/logo-check-plata.png">APP EXMA</li>
+							</ul>
+						</div>
+				    </div>
+		      	</div>
+			    <div class="modal-footer border-0">
+			    	<a class="btn btn-buy-modal bc-experience-3" href="https://vive.tuboleta.com/Shows/Show.aspx?sh=UEXMA">Compra Aquí</a>
 			    </div>
 		    </div>
 		  </div>
